--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,18 @@
 @import url("../node_modules/bootstrap-icons/font/bootstrap-icons.css");
 @import "custom.scss";
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+main {
+  margin-bottom: 250px; /* Margin bottom by footer height */
+}
+
+footer.footer {
+  padding: 15px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
