--- a/scss/main.css
+++ b/scss/main.css
@@ -11985,4 +11985,9 @@ footer.footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
 }/*# sourceMappingURL=main.css.map */
