--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
 @import url("../node_modules/bootstrap-icons/font/bootstrap-icons.css");
-@import "custom.scss";
+@import "_custom.scss";
 
 html {
   position: relative;
@@ -13,11 +13,38 @@ main {
 footer.footer {
   padding: 15px;
   position: absolute;
-  bottom: 0;
   width: 100%;
 }
 
 p {
   font-family: $font-family-sans-serif;
   font-size: 18px;
+}
+
+.hero-qa {
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/hero-qa.webp");
+    background-size: cover;
+    filter: brightness(0.3);
+  }
+
+  * {
+    // Positionner tous les éléments devant le ::before
+    position: relative;
+  }
+
+  .hero-qa-content {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
