--- a/scss/main.css
+++ b/scss/main.css
@@ -12014,4 +12014,7 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.hero-qa .text-justify {
+  text-align: justify;
 }/*# sourceMappingURL=main.css.map */
