--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
 @import url("../node_modules/bootstrap-icons/font/bootstrap-icons.css");
-@import "_custom.scss";
+@import "custom.scss";
 
 html {
   position: relative;
@@ -34,57 +34,47 @@ p {
     background-size: cover;
     filter: brightness(0.3);
   }
+}
 
-  * {
-    // Positionner tous les éléments devant le ::before
-    position: relative;
-  }
+* {
+  // Positionner tous les éléments devant le ::before
+  position: relative;
+}
 
-  .hero-qa-content {
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+.hero-qa-content {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
-  .text-justify {
-    text-align: justify;
-  }
+.text-justify {
+  text-align: justify;
+}
 
-  .image-card {
-    position: relative;
-
+.image-card {
+  position: relative;
+  &:hover {
     .titre-image {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      opacity: 1;
+      color: white;
     }
-  }
-
-  .image-card {
-    position: relative;
-    &:hover {
-      .titre-image {
-        opacity: 1;
-      }
-      img {
-        filter: brightness(0.3);
-      }
-    }
-
     img {
-      transition: all 0.3s;
+      filter: brightness(0.3);
     }
+  }
 
-    .titre-image {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      opacity: 0;
-      transition: all 0.3s;
-    }
+  img {
+    transition: all 0.3s;
+  }
+
+  .titre-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all 0.3s;
   }
 }
