--- a/scss/main.css
+++ b/scss/main.css
@@ -11977,7 +11977,7 @@ html {
 }
 
 main {
-  margin-bottom: 250px; /* Margin bottom by footer height */
+  margin-bottom: 270px; /* Margin bottom by footer height */
 }
 
 footer.footer {
@@ -11997,6 +11997,7 @@ p {
 .hero-qa::before {
   content: "";
   position: absolute;
+  margin-bottom: 15px;
   top: 0;
   left: 0;
   width: 100%;
@@ -12042,4 +12043,8 @@ p {
   transform: translate(-50%, -50%);
   opacity: 0;
   transition: all 0.3s;
+}
+
+.form-label {
+  color: #906427;
 }/*# sourceMappingURL=main.css.map */
