--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@ html {
 }
 
 main {
-  margin-bottom: 250px; /* Margin bottom by footer height */
+  margin-bottom: 270px; /* Margin bottom by footer height */
 }
 
 footer.footer {
@@ -26,6 +26,7 @@ p {
   &::before {
     content: "";
     position: absolute;
+    margin-bottom: 15px;
     top: 0;
     left: 0;
     width: 100%;
@@ -77,4 +78,8 @@ p {
     opacity: 0;
     transition: all 0.3s;
   }
+}
+
+.form-label {
+  color: $primary;
 }
